Finish nav bar design, fix spacing issues

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html {
 }
 
 nav {
-    width: 50px;
+    width: 80px;
     height: 100%;
     margin: 0px;
     padding: 0px;
@@ -12,15 +12,45 @@ nav {
     display: inline;
     position: fixed;
     float: left;
+    z-index: 20;
+    top: 0;
+    left: 0;
 }
 
 main {
     background-color: #eee;
-    margin-left: 50px;
+    margin-left: 100px;
     display: inline;
     float: left;
+    width: calc(100% - 100px);
 }
 
 nav img {
+    display: block;
+    width: 50%;
+    margin: auto;
+    margin-top: 10px;
+}
+
+nav div {
+    height: 27%;
+    display: block;
+}
+
+nav ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+nav li {
+    border-left: 3px solid #00000000;
+    margin-bottom: 20px;
+}
+
+.logo {
     width: 80%;
+}
+
+.selected {
+    border-left: 3px solid aqua;
 }
